redirect contact form, fix about us section

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
                 <input type="hidden" name="_utf8" value="✓">
 
-                <input type="hidden" name="_redirect" value="https://liveformhq.com/form-test/d2cc76eb-de6d-4fec-b86b-f31d2c317d6a#thank-you">
+                <input type="hidden" name="_redirect" value="https://multicampusco.org">
 
                 <div class='form-group' style="margin:0">
                   <label for="name">Tu nombre</label>
