improve about us, add visitors counters

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
     </div>
     <div class="container-fluid">
       <ul class="nav navbar-nav">
-        <li><a href="#">INICIO</a></li>
+        <li><a href="#HOME">INICIO</a></li>
         <li><a href="#">|</a></li>
-        <li><a href="#">ACERCA DE NOSOTROS</a></li>
+        <li><a href="#about_us">ACERCA DE NOSOTROS</a></li>
         <li><a href="#">|</a></li>
-        <li><a href="#">SERVICIOS</a></li>
+        <li><a href="#SERVICES">SERVICIOS</a></li>
         <li><a href="#">|</a></li>
-        <li><a href="#">CONTACTO</a></li>
+        <li><a href="#contacto">CONTACTO</a></li>
     </ul>
     </div>
   </nav>
@@ -208,6 +208,17 @@
 
                 <button type="submit" style="margin-top:25px">Enviar</button>
               </form>
+
+              <div class="counter"> 
+                <!-- hitwebcounter Code START -->
+                <a href="http://www.hitwebcounter.com" target="_blank">
+                <img src="http://hitwebcounter.com/counter/counter.php?page=7029807&style=0036&nbdigits=5&type=page&initCount=0" title="Counter for tumblr" Alt="Counter for tumblr"   border="0" >
+                </a>                                        <br/>
+                <!-- hitwebcounter.com --><a href="http://www.hitwebcounter.com" title="" 
+                target="_blank" style="font-family: ; 
+                font-size: px; color: #; text-decoration:  ;"><>                                        </>
+                </a>    
+              </div>                              
           </div>
         </div>
       </div>
