--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
 	<title>Multicampus: Expertos en estudios de mercado</title>
  
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-134700843-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-134700843-1');
+  </script>
+
    <!-- Latest compiled and minified CSS -->
      <!-- Latest compiled and minified CSS -->
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -216,7 +226,7 @@
                 </a>                                        <br/>
                 <!-- hitwebcounter.com --><a href="http://www.hitwebcounter.com" title="" 
                 target="_blank" style="font-family: ; 
-                font-size: px; color: #; text-decoration:  ;"><>                                        </>
+                font-size: px; color: #; text-decoration:  ;">                                   
                 </a>    
               </div>                              
           </div>
