check spelling on the whole index page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<title>Multicampus: Expertos en estudios de mercado</title>
  
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <meta charset="UTF-8">
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-134700843-1"></script>
   <script>
@@ -40,15 +43,15 @@
         <ul>
           <li><span> <img src="./images/location.png" style="height:20px"></span>Cra 7 # 33-29 Bogota,Colombia</li>
           <li><i class="fa fa-whatsapp" aria-hidden="true"></i> 3152614217/3228778066 </li>
-          <li><span class="glyphicon glyphicon-envelope"></span>  multicampus-co@gmail.com </li>
+          <li><span class="glyphicon glyphicon-envelope"></span>  multicampusco@gmail.com </li>
         </ul>
       </div>
-      <div>
+<!--       <div>
         <ul>  
-          <li>log in</li>
-          <li>sign up</li>
+          <li>ingresa</li>
+          <li>Registrate</li>
         </ul>
-      </div>
+      </div> -->
   </nav>
 
   <nav class="navbar">
@@ -117,7 +120,7 @@
       </div>
     </div>
     <div class = "secondary_info">
-      <h2> EN MULTICAMPUS ESTAMOS PARA ATENDER SUS NECESIDADES Y TRABAJAMOS PARA SU SATISFACCIÓN</h2>  
+      <h2> EN MULTICAMPUS ESTAMOS PARA ATENDER SUS NECESIDADES Y TRABAJAMOS PARA SU SATISFACCI&OacuteN</h2>  
     </div>
   </section>
 
@@ -125,16 +128,15 @@
   <img src="./images/location.png">
   <div class=container_about_us> 
     <div class=nuestra_empresa> 
-        <h1 class="h1_nuestra_empresa">NUESTRA ORGANIZACION </h1>
+        <h1 class="h1_nuestra_empresa">NUESTRA ORGANIZACI&Oacute;N </h1>
           <p class="p1_nuestra_empresa">
-            Nuestra organizacion realiza investigación y estudios de tipo cuantitativo y cualitativo en diversos campos del conocimiento con particular enfasis en las areas socio economicas. Acompañamos el desarrollo de su idea, y realizamos orientación metodologica para el desarrollo de proyectos de investigación a nivel de pregrado y posgrado.
+            Nuestra organizaci&oacute;n realiza investigaci&oacute;n y estudios de tipo cuantitativo y cualitativo en diversos campos del conocimiento con particular &eacute;nfasis en las &aacute;reas socio-econ&oacute;micas. Acompa&ntilde;amos el desarrollo de su idea, y realizamos orientaci&oacute;n metodol&oacute;gica para el desarrollo de proyectos de investigaci&oacute;n a nivel de pregrado y posgrado.
           </p>
       </div>
       <div class=quienes_somos> 
         <h1 > QUIENES SOMOS </h1>
-          <p>
-           Un equipo de profesionales con amplia experiencia en el sector publico, privado y en investigacion y docencia universitaria. Contamos con una amplia experincia en la elaboración de estudios de mercado asi como de planes de desarrollo, planes de negocio y ananlisis financiero de proyectos. 
-          </p>
+         <p> Un equipo de profesionales con amplia experiencia en el sector publico, privado y en investigaci&oacute;n y docencia universitaria. Contamos con una amplia experiencia en la elaboraci&oacute;n de estudios de mercado, asi como de planes de desarrollo, planes de negociosio y an&aacute;lisis financiero de proyectos.
+         </p>
       </div>
     </div>
   </section>
@@ -144,42 +146,41 @@
     <div class="container">
       <div class="service0">
         <div ><img src="./images/cover7.jpg"></div>
-        <p>Orientacion metodologica y acompañamiento en el desarrollo de proyectos de investigacion a nivel 
-          de pregrado y posgrado
+        <p>Orientaci&oacute;n metodol&oacute;gica y acompa&ntilde;amiento en el desarrollo de proyectos de investigaci&oacute;n a nivel de pregrado y posgrado
         </p>
         <!-- <div><img src="./images/bussines_plan.png"></div> -->
       </div>
       <div class="service1">
         <div class = "naranja1"><img src="./images/economia_naranja.png"></div>
-        <p>Orientacion para emprendimientos de economia naranja</p>
+        <p>Orientaci&oacute;n para emprendimientos de econom&iacute;a naranja</p>
         <!-- <div class = "naranja2"><img src="./images/orange.png"></div> -->
       </div>
       <div class="service2">
         <div><img src="./images/cover3.jpeg"></div>
         <p>Planes de negocios para distintos sectores productivos</p>
-        <p>Formulación y evaluacion de proyectos</p>
-        <p>Asesoria para fuentes de financiamiento</p>
+        <p>Formulaci&oacute;n y evaluaci&oacute;n de proyectos</p>
+        <p>Asesor&iacute;a para fuentes de financiamiento</p>
       </div>
       <div class="service3">
         <div ><img src="./images/cover8.jpg"></div>
         <p>Estudios de mercadeo a nivel nacional e internacional</p></div>
-      <div class="service4">
+       <div class="service4">
         <div ><img src="./images/cover6.jpg"></div>
         <p>Consecucion de informacion para investigacion sociopolitica y economica</p></div>
       <div class="service5">
         <div ><img src="./images/cover10.jpeg"></div>
-        <p>Asesoria para la formulacion y evaluacion de planes de desarrollo municipales</p></div>
+        <p>Asesoria para la formulaci&oacute;n y evaluaci&oacute;n de planes de desarrollo municipales</p></div>
     </div>
   </section>
 
    <section id="contacto">
       <div class="top">
-        <h1 class="h1-experience">CONTACTANOS</h1>
+        <h1 class="h1-experience">CONT&Aacute;CTANOS</h1>
       </div>
       <div id="container">
         <div class="left-side">
           <div class="contactos">
-            <h3>INFORMACION DE CONTACTO</h3>
+            <h3>INFORMACI&Oacute;N DE CONTACTO</h3>
             <div class=list>
                <p><span class="glyphicon glyphicon-envelope"></span> multicampusco@gmail.com</p>
                <p><span class="glyphicon glyphicon-earphone"></span></i> 57 315 261 4217</p>
@@ -191,7 +192,7 @@
           
         </div>
         <div class="right-side">
-          <h3>DEJANOS TUS DATOS, SERÁ UN GUSTO RESOLVER SU NECESIDAD</h3>
+          <h3>DEJANOS TUS DATOS, SER&Aacute; UN GUSTO RESOLVER TUS NECESIDADES</h3>
           <div class="frorm-flex">
               <form
                 action="https://liveformhq.com/form/d2cc76eb-de6d-4fec-b86b-f31d2c317d6a"
