add a dot at the end of contacto.

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       <div id="container">
         <div class="left-side">
           <div class="contactos">
-            <h3>INFORMACI&Oacute;N DE CONTACTO</h3>
+            <h3>INFORMACI&Oacute;N DE CONTACTO.</h3>
             <div class=list>
                <p><span class="glyphicon glyphicon-envelope"></span> multicampusco@gmail.com</p>
                <p><span class="glyphicon glyphicon-earphone"></span></i> 57 315 261 4217</p>
