update the contact for to a free version, remove the nav bar multicampus title

--- a/index.html
+++ b/index.html
@@ -36,16 +36,13 @@
 <body> 
 <header>
   <nav class="navbar navbar-inverse">
-      <div class="navbar-header">
-        <span class="navbar-brand">Multicampus S.A.S</span>  
-      </div>
-      <div class="navbar-content">
-        <ul>
-          <li><span> <img src="./images/location.png" style="height:20px"></span>Cra 7 # 33-29 Bogota,Colombia</li>
-          <li><i class="fa fa-whatsapp" aria-hidden="true"></i> 3152614217/3228778066 </li>
-          <li><span class="glyphicon glyphicon-envelope"></span>  multicampusco@gmail.com </li>
-        </ul>
-      </div>
+    <div class="navbar-content">
+      <ul>
+        <li><span> <img src="./images/location.png" style="height:20px"></span>Cra 7 # 33-29 Bogota,Colombia</li>
+        <li><i class="fa fa-whatsapp" aria-hidden="true"></i> 3152614217/3228778066 </li>
+        <li><span class="glyphicon glyphicon-envelope"></span>  multicampusco@gmail.com </li>
+      </ul>
+    </div>
 <!--       <div>
         <ul>  
           <li>ingresa</li>
@@ -56,7 +53,7 @@
 
   <nav class="navbar">
     <div class="navbar-header">
-        <span class="navbar-brand">Multicampus S.A.S</span>  
+        <span id="navbar-brand">Multicampus S.A.S</span>  
     </div>
     <div class="container-fluid">
       <ul class="nav navbar-nav">
@@ -194,42 +191,41 @@
         <div class="right-side">
           <h3>DEJANOS TUS DATOS, SER&Aacute; UN GUSTO RESOLVER TUS NECESIDADES</h3>
           <div class="frorm-flex">
-              <form
-                action="https://liveformhq.com/form/d2cc76eb-de6d-4fec-b86b-f31d2c317d6a"
-                method="POST" accept-charset="utf-8" role=form>
+            <form action="https://getsimpleform.com/messages?form_api_token=9021e8513cc3fd41eb2e357a5fa7ebbf" method="post">
 
-                <input type="hidden" name="_utf8" value="✓">
+              <input type="hidden" name="_utf8" value="✓">
 
-                <input type="hidden" name="_redirect" value="https://multicampusco.org">
+              <input type='hidden' name='redirect_to' value="https://multicampusco.org">
+              <input type="hidden" name="_redirect" value="https://multicampusco.org">
 
-                <div class='form-group' style="margin:0">
-                  <label for="name">Tu nombre</label>
-                  <input class='form-control' type="text" id="name" name="name">
-                </div>
+              <div class='form-group' style="margin:0">
+                <label for="name">Tu nombre</label>
+                <input class='form-control' type="text" id="name" name="name">
+              </div>
 
-                <div class='form-group' style="margin:0">
-                  <label for="email">Email</label>
-                  <input class='form-control' type="text" id="email" name="email">
-                </div>
+              <div class='form-group' style="margin:0">
+                <label for="email">Email</label>
+                <input class='form-control' type="text" id="email" name="email">
+              </div>
 
-                <div class='form-group' style="margin:0">
-                  <label for="message">Mensaje</label>
-                  <textarea class='form-control' id="message" name="message"></textarea>
-                </div>
+              <div class='form-group' style="margin:0">
+                <label for="message">Mensaje</label>
+                <textarea class='form-control' id="message" name="message"></textarea>
+              </div>
 
-                <button type="submit" style="margin-top:25px">Enviar</button>
-              </form>
+              <button type="submit" style="margin-top:25px">Enviar</button>
+            </form>
 
-              <div class="counter"> 
-                <!-- hitwebcounter Code START -->
-                <a href="http://www.hitwebcounter.com" target="_blank">
-                <img src="http://hitwebcounter.com/counter/counter.php?page=7029807&style=0036&nbdigits=5&type=page&initCount=0" title="Counter for tumblr" Alt="Counter for tumblr"   border="0" >
-                </a>                                        <br/>
-                <!-- hitwebcounter.com --><a href="http://www.hitwebcounter.com" title="" 
-                target="_blank" style="font-family: ; 
-                font-size: px; color: #; text-decoration:  ;">                                   
-                </a>    
-              </div>                              
+            <div class="counter"> 
+              <!-- hitwebcounter Code START -->
+              <a href="http://www.hitwebcounter.com" target="_blank">
+              <img src="http://hitwebcounter.com/counter/counter.php?page=7029807&style=0036&nbdigits=5&type=page&initCount=0" title="Counter for tumblr" Alt="Counter for tumblr"   border="0" >
+              </a>                                        <br/>
+              <!-- hitwebcounter.com --><a href="http://www.hitwebcounter.com" title="" 
+              target="_blank" style="font-family: ; 
+              font-size: px; color: #; text-decoration:  ;">                                   
+              </a>    
+            </div>                              
           </div>
         </div>
       </div>
