github test feb 26

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
      <script src="./app.js"></script>  
  </head>
 <body> 
+  <div style="display:none"> test github connection </div>
 <header>
   <nav class="navbar navbar-inverse">
     <div class="navbar-content">
