--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="container">
           <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-end" data-scrollax-parent="true">
           <div class="col-md-7 text ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-            <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }" style="color:#1a1888; font-size:80px; text-decoration:underline; font-family:fantasy"><em>Multicampus</em></h1>
+            <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }" style="color:#1a1888; font-size:80px; text-decoration:underline; font-family:fantasy;"><em>Multicampus</em></h1>
             <hr>
             <p data-scrollax="properties: { translateY: '30%', opacity: 1.6 }" style="color:#1a1888;"></p>
             <p><a href="#contact" class="btn btn-white btn-outline-white px-4 py-3 mt-3">Haz una cita</a></p>
