--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <img src="images/logo.jpg" alt="" style="border-radius:30px; height:80px;">
+	      <h2 style="color:#1a1888">MultiCampusCo</h2>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -75,7 +75,7 @@
         <div class="container">
           <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-end" data-scrollax-parent="true">
           <div class="col-md-7 text ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-            <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }" style="text-decoration:underline;"><em>Multicampus</em></h1>
+            <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }" style="text-decoration:underline;"><em>MultiCampusCo</em></h1>
             <hr>
             <p data-scrollax="properties: { translateY: '30%', opacity: 1.6 }" style="color:#1a1888;"></p>
             <p><a href="#contact" class="btn btn-white btn-outline-white px-4 py-3 mt-3">Haz una cita</a></p>
@@ -90,7 +90,6 @@
           <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-end" data-scrollax-parent="true">
           <div class="col-md-7 text ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
             <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }" style="color:#e7e4ed;"><em>Consultorías en diferentes áreas de humanidades y ciencias sociales.</em></h1>
-            <p><a href="#contact" class="btn btn-white btn-outline-white px-4 py-3 mt-3">Haz una cita</a></p>
           </div>
         </div>
         </div>
