Add color title

--- a/index.html
+++ b/index.html
@@ -74,22 +74,11 @@
       	<div class="overlay"></div>
         <div class="container">
           <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-end" data-scrollax-parent="true">
-          <div class="col-md-7 text ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-            <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }" style="text-decoration:underline;"><em>MultiCampusCo</em></h1>
+          <div class="col-md-7 text ftco-animate">
+            <h1 class="mb-4" style=" color:#1a1888"><em>Consultorías en diferentes áreas de humanidades y ciencias sociales.</em></h1>
             <hr>
-            <p data-scrollax="properties: { translateY: '30%', opacity: 1.6 }" style="color:#1a1888;"></p>
+            <p style="color:#1a1888;"></p>
             <p><a href="#contact" class="btn btn-white btn-outline-white px-4 py-3 mt-3">Haz una cita</a></p>
-          </div>
-        </div>
-        </div>
-      </div>
-
-      <div class="slider-item js-fullheight" style="background-image:url(images/bg_1.jpg);">
-      	<div class="overlay"></div>
-        <div class="container">
-          <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-end" data-scrollax-parent="true">
-          <div class="col-md-7 text ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-            <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }" style="color:#e7e4ed;"><em>Consultorías en diferentes áreas de humanidades y ciencias sociales.</em></h1>
           </div>
         </div>
         </div>
