Change picture Sra Esperanza

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     <section class="ftco-section ftc-no-pb" id="team">
       <div class="container">
         <div class="row no-gutters">
-          <div class="col-md-5 p-md-5 img img-2 d-flex justify-content-center align-items-center" style="background-image: url(images/sraesperanza.jpg);">
+          <div class="col-md-5 p-md-5 img img-2 d-flex justify-content-center align-items-center" style="background-image: url(images/fotosra.jpg);">
               <span class="icon-play"></span>
             </a>
           </div>
@@ -215,7 +215,7 @@
               <p>Economista, con postgrados en Economía Internacional y cooperación e integración económica.</p>
               <p>Posee amplia experiencia en formulación y evaluación de proyectos, planes de negocios y estudios socioeconómicos.</p>
               <p>Docente-investigadora a nivel de educación superior.</p>
-              <p>Sus trabajos e investigaciones,han sido publicados en prestigiosas revistas indexadas tanto nacionales y extranjeras.</p>
+              <p>Sus trabajos e investigaciones,han sido publicados en prestigiosas revistas indexadas tanto nacionales como extranjeras.</p>
             </div>
           </div>
         </div>
