--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	        	<li class="nav-item active"><a href="#start" class="nav-link">Inicio</a></li>
-	        	<li class="nav-item"><a href="#about" class="nav-link">Acerca</a></li>
-            <li class="nav-item"><a href="#services" class="nav-link">Nuestros servicios</a></li>
-            <li class="nav-item"><a href="#team" class="nav-link">Equípo</a></li>
-	          <li class="nav-item"><a href="#contact" class="nav-link">Contacto</a></li>
+	        	<li class="nav-item active"><a href="#start" class="nav-link"><strong>Inicio</strong></a></li>
+	        	<li class="nav-item"><a href="#about" class="nav-link"><strong>Acerca</strong></a></li>
+            <li class="nav-item"><a href="#services" class="nav-link"><strong>Nuestros servicios</strong></a></li>
+            <li class="nav-item"><a href="#team" class="nav-link"><strong>Equípo</strong></a></li>
+	          <li class="nav-item"><a href="#contact" class="nav-link"><strong>Contacto</strong></a></li>
 	        </ul>
 	      </div>
 	    </div>
@@ -87,7 +87,7 @@
 		<section class="ftco-section ftc-no-pb" id="about">
 			<div class="container">
 				<div class="row no-gutters">
-					<div class="col-md-5 p-md-5 img img-2 d-flex justify-content-center align-items-center" style="background-image: url(images/asesor.jpg); height:500px;">
+					<div class="col-md-5 p-md-5 img img-2 d-flex justify-content-center align-items-center" style="background-image: url(images/asesor.jpg); height:500px;margin-top:80px;">
 					</div>
 					<div class="col-md-7 wrap-about pb-md-5 ftco-animate">
 	          <div class="heading-section mb-5 pl-md-5">
@@ -97,7 +97,8 @@
 	            </div>
 	          </div>
 	          <div class="pl-md-5 ml-md-5 mb-5">
-							<p>Realizamos investigación y estudios de tipo cuantitativo y cualitativo en diversos campos del conocimiento con particular énfasis en las áreas socio-económicas. Acompañamos el desarrollo de su idea, y realizamos orientación metodológica para el desarrollo de proyectos de investigación a nivel de pregrado y posgrado.</p>
+							<p>Realizamos investigación y estudios de tipo cuantitativo y cualitativo en diversos campos del conocimiento con particular énfasis en las áreas socio-económicas.</p>
+              <p>Acompañamos el desarrollo de su idea, y realizamos orientación metodológica para el desarrollo de proyectos de investigación a nivel de pregrado y posgrado.</p>
 						</div>
             <div class="heading-section mb-5 pl-md-5">
               <div class="pl-md-5 ml-md-5">
@@ -200,7 +201,7 @@
     <section class="ftco-section ftc-no-pb" id="team">
       <div class="container">
         <div class="row no-gutters">
-          <div class="col-md-5 p-md-5 img img-2 d-flex justify-content-center align-items-center" style="background-image: url(images/fotosra.jpg);">
+          <div class="col-md-5 p-md-5 img img-2 d-flex justify-content-center align-items-center" style="background-image: url(images/fotosra.jpg); margin-bottom:70px;">
               <span class="icon-play"></span>
             </a>
           </div>
@@ -228,7 +229,7 @@
           <div class="col-md-7 heading-section ftco-animate text-center">
           	<span class="subheading">Contacto</span>
             <h2 class="mb-4"><em>Información de Contacto</em></h2>
-            <p>Comunícate con nosotros y te resolveremos tus inquiétudes</p>
+            <p>Comunícate con nosotros y te resolveremos tus inquietudes</p>
           </div>
         </div>
         <div class="row block-9">
@@ -236,7 +237,7 @@
             <a class="whatsapp" href="https://wa.me/573152614217" target="_blank">
               <i class="fab fa-whatsapp fa-3x"></i>
             </a>
-            <p style="display:inline-flex">  Comúnicate YA con uno de nuestros asesores</p>
+            <p style="display:inline-flex">  Comúnicate YA con uno de nuestros asesores (Haz click en el ícono)</p>
             <br>
             <br>
             <a href="https://www.facebook.com/Multicampus-368926447299953/?modal=admin_todo_tour">
