--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                 <input type="text" class="form-control" name="asunto" placeholder="Asunto">
               </div>
               <div class="form-group">
-                <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Mensaje"></textarea>
+                <textarea name="" id="" cols="30" rows="7" name="message" class="form-control" placeholder="Mensaje"></textarea>
               </div>
               <div class="form-group">
                 <input type="submit" value="Envíar mensaje" class="btn btn-primary py-3 px-5">
